UIP-1816 : CLONE - Azure AD Integration Grant Permission Step Styling Errors; Allow validation messages to be displayed inline
Change-Id: I5f42fc119f32228afc420868b6be654b971ccb54

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2498,6 +2498,10 @@ input[type=file] {
     display: none;
     &.show {
         display: block;
+        &.inline {
+            display: inline-block;
+            margin-left: 5px;
+        }
     }
     .message {
         padding: 3px 0;
