UIP-1850 Title for LabelValuePairs
Change-Id: Ia58a033eb5a9be1045fcc99a237f2376ae93e5be

--- a/packages/ui-library/src/css/layout/_label-value-pairs.scss
+++ b/packages/ui-library/src/css/layout/_label-value-pairs.scss
@@ -22,10 +22,11 @@
 
     grid-column: 2;
 
-    & .help-tooltip {
-        padding-left: $spacing-sm;
-        vertical-align: middle;
-    }
+}
+
+.label-value-pairs__help-hint {
+    padding-left: $spacing-sm;
+    vertical-align: middle;
 }
 
 .label-value-pairs__divider {
@@ -35,4 +36,15 @@
 
     grid-column-start: 1;
     grid-column-end: span 2;
+}
+
+.label-value-pairs__title {
+    @include parent-label;
+
+    grid-column-start: 1;
+    grid-column-end: span 2;
+}
+
+* + .label-value-pairs__title {
+    padding-top: $spacing-xs;
 }
