--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -46,7 +46,7 @@ $layout-nav-width-offset: 15px;
 
 // CORE PAGE LAYOUT STYLES -------------------------------------------------------------------------
 #header {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
@@ -1257,7 +1257,7 @@ $color-grey-minor-1: $color-neutral-30;
     background: rgba($color-white, 0.9);
     border-top: 1px solid $color-rabbit-fur;
 
-    @include transition(all 0.2s);
+    @include transition(translate 0.2s);
 
     &.hidden {
         @include transform(translateY(100%));
