--- a/packages/ui-library/src/css/wizard.scss
+++ b/packages/ui-library/src/css/wizard.scss
@@ -14,7 +14,10 @@ $wizard-title-font-size: 28px;
 $wizard-selected-arrow-width: 15px;
 $wizard-content-bg-color: $color-strong-neutral-90;
 
-.wizard-2 {
+$wizard-header-height: 77px;
+$wizard-close-button-color: $color-strong-neutral-40;
+
+.wizard2 {
     * {
         box-sizing: border-box;
     }
@@ -34,8 +37,10 @@ $wizard-content-bg-color: $color-strong-neutral-90;
         background-color: $color-white;
     }
 
+    @include style-inputs-light;
+
     // I know we are trying to only do one level of specificity for BEM and such, but I need to override the button bar defaults
-    .wizard__button-bar {
+    .wizard2__button-bar {
         position: fixed;
         left: $wizard-h-spacing;
         right: $wizard-progress-menu-width + $wizard-h-spacing;
@@ -45,6 +50,7 @@ $wizard-content-bg-color: $color-strong-neutral-90;
         z-index: 10;
     }
 
+    // psuedo element to cover the header items when the wizard is open
     &:before {
         content: '';
         position: fixed;
@@ -55,319 +61,332 @@ $wizard-content-bg-color: $color-strong-neutral-90;
         background-color: rgba($color-neutral-10, 0.7);
     }
 
-    @include style-inputs-light;
-}
-
-$wizard-header-height: 77px;
-$wizard-close-button-color: $color-strong-neutral-40;
-
-@include keyframes('slide-menu-down') {
-    0% {
-        margin-top: -#{$wizard-header-height};
-    }
-    100% {
-        margin-top: 0;
-    }
-}
-
-@include keyframes('close-button-color') {
-    0% {
-        color: $color-white;
-    }
-    100% {
-        color: $wizard-close-button-color;
-    }
-}
-
-// Not BEM but the menu height needs to be altered when the header is showing
-.wizard-2--header-shown {
-    .wizard-progress-menu-scroller {
-        top: $wizard-header-height;
-    }
-    .wizard__content {
-        top: $wizard-header-height;
-    }
-}
-
-.wizard-close-btn {
-    z-index: 1;
-    float: right;
-    margin: 20px 15px 0 0;
-    padding: 0;
-    border: none;
-    background: none;
-    font-size: 24px;
-    line-height: 1em;
-    opacity: 0.5;
-    color: $color-white;
-
-    &:before {
-        content: 'x';
-        font-family: $icon-font;
-        display: block;
-    }
-    &:hover {
-        color: $color-white;
-        opacity: 1;
-    }
-}
-
-.wizard__header {
-    width: 100%;
-    display: flex;
-    background-color: $color-white;
-    font-size: $wizard-title-font-size;
-    font-family: $font-pn-light;
-    border-bottom: 1px solid $wizard-header-border-color;
-}
-
-.wizard__header-details {
-    padding: $spacing-md $spacing-lg;
-    flex: 1;
-    border-right: 1px solid $wizard-header-border-color;
-    font-size: 23px;
-    color: $color-accent-neutral-10;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    &:last-child {
-        border-right: none;
-    }
-}
-
-.wizard__header-title {
-    font-family: $font-pn-regular;
-    font-size: 12px;
-    color: $color-blue-grey;
-    margin-bottom: $spacing-sm;
-    text-transform: uppercase;
-}
-
-.wizard__content {
-    $buttonbar-height: 87px;
-
-    position: absolute;
-    width: calc(100% - #{$wizard-progress-menu-width});
-    padding: $wizard-padding;
-    margin: 0 0 $buttonbar-height 0;
-    bottom: 0;
-    top: 0;
-    overflow-y: auto;
-
-    .page-messages {
-        position: relative;
-        top: -$wizard-v-spacing;
-        left: -$wizard-h-spacing;
-        width: calc(100% + (#{$wizard-h-spacing} * 2));
-    }
-
-    // add spacing at the end of the scrolling content container
-    &:after {
-        content: '';
-        display: block;
-        height: $wizard-v-spacing;
-    }
-}
-
-
-.wizard-step__title {
-    font-size: $wizard-title-font-size;
-    font-family: $font-pn-light;
-    line-height: 1em;
-    margin-bottom: $wizard-text-spacing;
-}
-
-.wizard-step__description {
-    margin-bottom: $wizard-v-spacing;
-}
-
-.wizard-step__content {
-    margin-left: $wizard-h-spacing;
-
-    &:before {
-        content: '';
-        border-top: 1px solid $color-rabbit-fur;
-        display: block;
-        margin-bottom: $spacing-xl;
-        margin-left: -$wizard-h-spacing;
-    }
-}
-
-.wizard-progress-menu-scroller {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    overflow-y: auto;
-    width: $wizard-progress-menu-width + $wizard-selected-arrow-width;
-}
-
-.wizard-progress-menu {
-    min-height: 100%;
-    margin-left: $wizard-selected-arrow-width;
-    background-color: $wizard-progress-menu-bgcolor;
-    color: $color-white;
-}
-
-.wizard-progress-menu__title {
-    position: relative;
-    text-transform: uppercase;
-    font-size: 18px;
-    padding: 30px 25px 25px 20px;
-}
-
-.wizard-progress-menu__step {
-    position: relative;
-    padding: $wizard-progress-menu-padding;
-    cursor: pointer;
-
-    &:after {
-        @include inactive-link-styles;
-    }
-
-    .wizard-progress-menu__item-description {
-        opacity: 0.8;
-    }
-
-    &--completed {
-        .wizard-progress-menu__item-title .wizard-progress-menu__item-title-text,
-        .wizard-progress-menu__item-description {
-            opacity: 0.6;
+    // contextual CSS
+    &--header-shown {
+        .wizard2-progress-menu-scroller {
+            top: $wizard-header-height;
+        }
+        .wizard2__content {
+            top: $wizard-header-height;
         }
     }
-}
-
-.wizard-progress-menu__step--click-disabled {
-    cursor: default;
-}
-
-.wizard-progress-menu__step--active {
-    background-color: $wizard-progress-menu-selected-bgcolor;
-
-    .wizard-progress-menu__item-description {
-        opacity: 1;
+    &--menu-hidden {
+        .wizard2__content {
+            width: 100%;
+        }
+        .wizard2__button-bar {
+            right: 40px;
+        }
+        .wizard2__page-loader {
+            left: 50%;
+        }
+    }
+    &--buttonbar-hidden {
+        .wizard2__content {
+            margin-bottom: 0;
+        }
     }
 
-    &:before {
-        content: '';
-        border-style: solid;
-        border-width: 15px;
-        border-color: transparent $wizard-progress-menu-selected-bgcolor transparent transparent;
-        height: 0;
-        width: 0;
-        position: absolute;
-        top: 17px;
-        left: -#{$wizard-selected-arrow-width * 2};
-    }
-    &:after {
-        @include active-link-styles;
-    }
-}
-
-.wizard-progress-menu__divider-container {
-    overflow: hidden;
-    padding: $wizard-progress-menu-padding 10px;
-    text-align: center;
-    border-style: solid;
-    border-color: transparent $wizard-progress-menu-bgcolor;
-    border-width: 0 $wizard-progress-menu-padding;
-}
-
-.wizard-progress-menu__divider {
-    position: relative;
-    font-family: $font-pn-light;
-    font-size: 12px;
-    text-align: center;
-    text-transform: uppercase;
-    display: inline-block;
-    vertical-align: middle;
-
-    &:before,
-    &:after {
-        content: '';
-        display: block;
-        position: absolute;
-        top: calc(50% - 2px); //subtract 2px because of offset given for hanging characters
-        height: 0;
-        width: 400px;
-        border-bottom: 1px solid $color-white;
-    }
-    &:before {
-        right: 100%;
-        margin-right: 10px;
-    }
-    &:after {
-        left: 100%;
-        margin-left: 10px;
-    }
-
-}
-
-.wizard-progress-menu__item-title-text {
-    display: inline-block;
-    margin-left: $wizard-progress-menu-padding + $wizard-progress-icon-size;
-    margin-bottom: $spacing-sm;
-    font-size: $wizard-progress-title-size;
-    line-height: 1em;
-    vertical-align: top;
-}
-
-.wizard-progress-menu__item-title-icon {
-    display: inline-block;
-    font-size: $wizard-progress-title-size - 2;
-    line-height: 1em;
-    margin-left: $spacing-md;
-}
-
-.wizard-progress-menu__editable {
-    .wizard-progress-menu__item-title-text {
-        max-width: 165px;
-    }
-}
-
-.wizard-progress-menu__item-description {
-    margin-left: $wizard-progress-menu-padding + $wizard-progress-icon-size;
-    font-family: $font-pn-light;
-    font-size: 14px;
-}
-
-.wizard-progress-menu__step-icon {
-    position: absolute;
-    height: $wizard-progress-icon-size;
-    width: $wizard-progress-icon-size;
-    line-height: $wizard-progress-icon-size;
-    border-radius: 50%;
-    border: $wizard-progress-icon-border-size solid $color-white;
-    color: $color-white;
-    text-align: center;
-}
-
-.wizard-progress-menu__step-icon--required-active {
-    background-color: $color-white;
-    color: $wizard-progress-menu-selected-bgcolor;
-}
-
-.wizard-progress-menu__step-icon--optional-active {
-    @extend .wizard-progress-menu__step-icon--required-active;
-    font-family: $font-pn-bold;
-    font-size: 24px;
-
-    &:before {
-        display: block;
-        content: '...';
-        line-height: 0.5;
-    }
-}
-
-.wizard-progress-menu__step-icon--completed {
-    @extend .icon-check;
-    font-family: 'iconfont';
-    background-color: $color-success;
-    border-color: $color-success;
-    font-size: 10px;
-    &:before {
-        display: block;
+    &-close-btn {
+        z-index: 1;
+        float: right;
+        margin: 20px 15px 0 0;
+        padding: 0;
+        border: none;
+        background: none;
+        font-size: 24px;
+        line-height: 1em;
+        opacity: 0.5;
         color: $color-white;
+
+        &:before {
+            content: 'x';
+            font-family: $icon-font;
+            display: block;
+        }
+        &:hover {
+            color: $color-white;
+            opacity: 1;
+        }
+    }
+
+    &__header {
+        width: 100%;
+        display: flex;
+        background-color: $color-white;
+        font-size: $wizard-title-font-size;
+        font-family: $font-pn-light;
+        border-bottom: 1px solid $wizard-header-border-color;
+    }
+
+    &__header-details {
+        padding: $spacing-md $spacing-lg;
+        flex: 1;
+        border-right: 1px solid $wizard-header-border-color;
+        font-size: 23px;
+        color: $color-accent-neutral-10;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        &:last-child {
+            border-right: none;
+        }
+    }
+
+    &__header-title {
+        font-family: $font-pn-regular;
+        font-size: 12px;
+        color: $color-blue-grey;
+        margin-bottom: $spacing-sm;
+        text-transform: uppercase;
+    }
+
+    &__content {
+        $buttonbar-height: 87px;
+
+        position: absolute;
+        width: calc(100% - #{$wizard-progress-menu-width});
+        padding: $wizard-padding;
+        margin: 0 0 $buttonbar-height 0;
+        bottom: 0;
+        top: 0;
+        overflow-y: auto;
+
+        .page-messages {
+            position: relative;
+            top: -$wizard-v-spacing;
+            left: -$wizard-h-spacing;
+            width: calc(100% + (#{$wizard-h-spacing} * 2));
+        }
+
+        // add spacing at the end of the scrolling content container
+        &:after {
+            content: '';
+            display: block;
+            height: $wizard-v-spacing;
+        }
+    }
+
+    &-step {
+        &__title {
+            font-size: $wizard-title-font-size;
+            font-family: $font-pn-light;
+            line-height: 1em;
+            margin-bottom: $wizard-text-spacing;
+        }
+        &__description {
+            margin-bottom: $wizard-v-spacing;
+        }
+        &__content {
+            margin-left: $wizard-h-spacing;
+
+            &:before {
+                content: '';
+                border-top: 1px solid $color-rabbit-fur;
+                display: block;
+                margin-bottom: $spacing-xl;
+                margin-left: -$wizard-h-spacing;
+            }
+        }
+    }
+
+    &-progress-menu {
+        min-height: 100%;
+        margin-left: $wizard-selected-arrow-width;
+        background-color: $wizard-progress-menu-bgcolor;
+        color: $color-white;
+
+        &-scroller {
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            overflow-y: auto;
+            width: $wizard-progress-menu-width + $wizard-selected-arrow-width;
+        }
+
+        &__title {
+            position: relative;
+            text-transform: uppercase;
+            font-size: 18px;
+            padding: 30px 25px 25px 20px;
+        }
+
+        &__step {
+            position: relative;
+            padding: $wizard-progress-menu-padding;
+            cursor: pointer;
+
+            &:after {
+                @include inactive-link-styles;
+            }
+
+            .wizard-progress-menu__item-description {
+                opacity: 0.8;
+            }
+
+            &-icon {
+                position: absolute;
+                height: $wizard-progress-icon-size;
+                width: $wizard-progress-icon-size;
+                line-height: $wizard-progress-icon-size;
+                border-radius: 50%;
+                border: $wizard-progress-icon-border-size solid $color-white;
+                color: $color-white;
+                text-align: center;
+
+                @mixin required-active-css {
+                    background-color: $color-white;
+                    color: $wizard-progress-menu-selected-bgcolor;
+                }
+
+                &--required-active {
+                    @include required-active-css;
+                }
+
+                &--optional-active {
+                    @include required-active-css;
+                    font-family: $font-pn-bold;
+                    font-size: 24px;
+
+                    &:before {
+                        display: block;
+                        content: '...';
+                        line-height: 0.5;
+                    }
+                }
+
+                &--completed {
+                    @extend .icon-check;
+                    font-family: 'iconfont';
+                    background-color: $color-success;
+                    border-color: $color-success;
+                    font-size: 10px;
+                    &:before {
+                        display: block;
+                        color: $color-white;
+                    }
+                }
+            }
+
+            &--completed {
+                .wizard-progress-menu__item-title .wizard-progress-menu__item-title-text,
+                .wizard-progress-menu__item-description {
+                    opacity: 0.6;
+                }
+            }
+
+            &--click-disabled {
+                cursor: default;
+            }
+
+            &--active {
+                background-color: $wizard-progress-menu-selected-bgcolor;
+
+                .wizard-progress-menu__item-description {
+                    opacity: 1;
+                }
+
+                &:before {
+                    content: '';
+                    border-style: solid;
+                    border-width: 15px;
+                    border-color: transparent $wizard-progress-menu-selected-bgcolor transparent transparent;
+                    height: 0;
+                    width: 0;
+                    position: absolute;
+                    top: 17px;
+                    left: -#{$wizard-selected-arrow-width * 2};
+                }
+                &:after {
+                    @include active-link-styles;
+                }
+            }
+        }
+
+        &__divider {
+            position: relative;
+            font-family: $font-pn-light;
+            font-size: 12px;
+            text-align: center;
+            text-transform: uppercase;
+            display: inline-block;
+            vertical-align: middle;
+
+            &:before,
+            &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                top: calc(50% - 2px); //subtract 2px because of offset given for hanging characters
+                height: 0;
+                width: 400px;
+                border-bottom: 1px solid $color-white;
+            }
+            &:before {
+                right: 100%;
+                margin-right: 10px;
+            }
+            &:after {
+                left: 100%;
+                margin-left: 10px;
+            }
+
+            &-container {
+                overflow: hidden;
+                padding: $wizard-progress-menu-padding 10px;
+                text-align: center;
+                border-style: solid;
+                border-color: transparent $wizard-progress-menu-bgcolor;
+                border-width: 0 $wizard-progress-menu-padding;
+            }
+        }
+
+        &__item {
+            &-title {
+                white-space: nowrap;
+
+                &-text {
+                    display: inline-block;
+                    white-space: normal;
+                    margin-left: $wizard-progress-menu-padding + $wizard-progress-icon-size;
+                    margin-bottom: $spacing-sm;
+                    font-size: $wizard-progress-title-size;
+                    line-height: 1em;
+                    vertical-align: top;
+                    max-width: 175px;
+                }
+
+                &-icon {
+                    display: inline-block;
+                    white-space: normal;
+                    font-size: $wizard-progress-title-size - 2;
+                    line-height: 1em;
+                    margin-left: $spacing-md;
+                }
+            }
+
+            &-description {
+                margin-left: $wizard-progress-menu-padding + $wizard-progress-icon-size;
+                font-family: $font-pn-light;
+                font-size: 14px;
+            }
+        }
+
+        &__editable {
+            .wizard-progress-menu__item-title-text {
+                max-width: 165px;
+            }
+        }
+    }
+
+    &__page-loader {
+        position: fixed;
+        left: calc(50% - 140px); // 140px = half of wizard right-nav width (center on wizard content)
+        top: 50%;
+        margin: 0;
+        z-index: 11;
+        transform: translateX(-50%) translateY(-50%);
     }
 }
