UIP-1752 checkbox inline
Change-Id: I4b14c7cc86a98ada2c61e4d99d1e5761c6d799f6

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2544,6 +2544,15 @@ input[type=file] {
         margin-bottom: initial;
     }
 
+    .input-checkbox {
+        &.inline {
+            vertical-align: bottom;
+            line-height: 27px;
+            .icon {
+                bottom: 3px;
+            }
+        }
+    }
 }
 
 .checkbox-list {
