UIP-1854 Updates to QueryBuilder template
Change-Id: I99c4f1555ba6ffc05d4b59f35555a0feb61efeac

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -5,6 +5,13 @@ a[class*=' icon-'] {
     text-decoration: none;
 }
 
+a [class^='icon-'],
+a [class*=' icon-'] {
+    &:before {
+        display: inline-block; // need this to remove underlines
+    }
+}
+
 a.icon-clear,
 a .icon-clear,
 a.icon-plus,
