--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1266,6 +1266,7 @@ $color-grey-minor-1: $color-neutral-30;
     @include button-spacing();
 
     &--unfixed {
+        background: none;
         position: relative;
         left: auto;
         right: auto;
