--- a/packages/ui-library/src/css/searchbar.scss
+++ b/packages/ui-library/src/css/searchbar.scss
@@ -105,14 +105,6 @@ $searchbar-input-height: 38px;
         text-align: right;
     }
 
-    &__remove-icon {
-        margin-bottom: 13px;
-    }
-
-    &__advanced-time-zone {
-        margin-bottom: 13px;
-    }
-
     &__apply-button {
         margin-top: $spacing-sm;
         text-align: right;
@@ -125,5 +117,14 @@ $searchbar-input-height: 38px;
     &__doc-link {
         margin-top: $spacing-sm;
         text-align: right;
+    }
+
+    .input-row a {
+        line-height: 38px;
+    }
+
+    .page-controls-primary {
+        border-top: none;
+        padding-bottom: 0;
     }
 }
