--- a/packages/end-user/src/css/components/_tooltip.scss
+++ b/packages/end-user/src/css/components/_tooltip.scss
@@ -19,11 +19,13 @@ $tooltip-border: $color-neutral-60;
     border-radius: 1px;
     bottom: 0;
     box-shadow: $shadow-overlay;
+    max-width: 290px;
     padding: $spacing-md;
     position: absolute;
     right: -$spacing-md;
     transform: translateX(100%);
-    word-break: break-all;
+    word-break: break-all; // IE doesn't like break-word, so we need this to fall back
+    word-break: break-word;
     z-index: 1;
 
     &:before {
