--- a/packages/end-user/static/end-user.css
+++ b/packages/end-user/static/end-user.css
@@ -204,6 +204,14 @@
 
 .feedback__message, .requirement__name,
 .icon-pair__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
   -ms-flex-negative: 1;
       flex-shrink: 1; }
 
@@ -676,12 +684,14 @@
   bottom: 0;
   -webkit-box-shadow: 1px 1px 4px rgba(77, 77, 77, 0.25);
           box-shadow: 1px 1px 4px rgba(77, 77, 77, 0.25);
+  max-width: 290px;
   padding: 15px;
   position: absolute;
   right: -15px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   word-break: break-all;
+  word-break: break-word;
   z-index: 1; }
   .tooltip:before {
     content: '';
