--- a/packages/end-user/static/end-user.css
+++ b/packages/end-user/static/end-user.css
@@ -257,6 +257,8 @@
 
 .card {
   background: white;
+  -webkit-box-shadow: 1px 1px 4px rgba(77, 77, 77, 0.25);
+          box-shadow: 1px 1px 4px rgba(77, 77, 77, 0.25);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0 auto;
