UIP-1851: Add prop to TileButton for showing text with divider
Change-Id: Ie20beb76b67f070dd8d3dabde321e15c72b27b36

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -499,6 +499,19 @@ button.tile-button {
         }
     }
 
+    &__details {
+        text-align: left;
+        color: $color-neutral-50;
+        list-style: disc inside;
+        margin-top: $spacing-sm;
+    }
+
+    &__divider {
+        border-top: 1px solid $color-neutral-50;
+        margin-top: $spacing-sm;
+        width: 100%;
+    }
+
     &__icon {
         font-size: 80px;
         color: $color-midnight;
@@ -507,6 +520,9 @@ button.tile-button {
 
     &__content {
         @include flexbox-grow(1);
+
+        line-height: 1.3em;
+        text-align: left;
     }
 
     &__title {
