UIP-1891 Darker critical red
Change-Id: Id6a55de91b82259d02abcc4ff769f6a21cc7f039

--- a/packages/ui-library/src/css/colors.scss
+++ b/packages/ui-library/src/css/colors.scss
@@ -36,7 +36,7 @@ $color-accent-neutral-90: #f0f6f7;
 // SEMANTIC COLORS
 $color-active-blue: #2996cc;
 $color-active-blue-highlighted: tint($color-active-blue, 10%);
-$color-critical-red: #ed3a03;
+$color-critical-red: #a31300;
 $color-critical-red-highlighted: tint($color-critical-red, 10%);
 $color-success-green: #4aba78;
 $color-success-green-highlighted: tint($color-success-green, 10%);
