--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -16,6 +16,7 @@ $icon-browser: "\e917";
 $icon-bullet-list: "\e920";
 $icon-cabinet: "\24";
 $icon-calendar: "\43";
+$icon-cert-connection: "\e925";
 $icon-certificate: "\e901";
 $icon-chat: "\e90e";
 $icon-chat-square: "\e918";
