UIP-1884 fullwidth inlineMessage
Change-Id: I7dab0a869ffee55ca302854934b27b59509c47f9

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -959,6 +959,10 @@ $color-grey-minor-1: $color-neutral-30;
         }
     }
 
+    &--fullwidth {
+        display: block;
+    }
+
     &--borderless {
         &,
         &.warning,
