UIP-1895 : move close button markup so that it still displays when the menu is closed
Change-Id: Ia23a3324ca2f894abed4f910f17187959a371877

--- a/packages/ui-library/src/css/wizard.scss
+++ b/packages/ui-library/src/css/wizard.scss
@@ -77,6 +77,10 @@ $wizard-close-button-color: $color-strong-neutral-40;
         .wizard2__page-loader {
             left: 50%;
         }
+        .wizard2-close-btn,
+        .wizard2-close-btn:hover {
+            color: $color-neutral-30;
+        }
     }
     &--buttonbar-hidden {
         .wizard2__content {
