--- a/packages/end-user/static/end-user.css
+++ b/packages/end-user/static/end-user.css
@@ -105,13 +105,14 @@
 
 .heading--4 {
   margin-bottom: 15px;
-  font-size: 15px; }
+  font-size: 15px;
+  text-align: left; }
 
 .requirement,
 .tiny-text {
-  color: #595959;
+  color: #4d4d4d;
   font-weight: 200;
-  font-size: 11px;
+  font-size: 13px;
   font-family: "proxima-nova", sans-serif; }
 
 
