--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -13,6 +13,7 @@
 @import './common/icon-pairs';
 
 @import './components/button';
+@import './components/button-set';
 @import './components/card';
 @import './components/checkbox';
 @import './components/dropdown';
