--- a/packages/end-user/src/css/common/_icon-pairs.scss
+++ b/packages/end-user/src/css/common/_icon-pairs.scss
@@ -14,6 +14,7 @@
 .icon-pair__label {
     display: flex;
     flex-direction: column;
+    margin-top: 0.15em;
     width: 100%;
     // this is here to make text wrap properly in IE10 -jfal
     flex-shrink: 1;
