UIP-1910 When the old wizard has more than 6 steps, put a circle around the step numbers
Change-Id: I1f400f1a1fc98d5be9506095ac8206aa4c6be15f

--- a/packages/ui-library/src/css/progress-indicators.scss
+++ b/packages/ui-library/src/css/progress-indicators.scss
@@ -23,37 +23,31 @@
     }
     &:before {
         color: rgba($color-midnight, 0.2);
+        content: 'O';
     }
     &:after {
         color: $color-midnight;
     }
 
-    &.of1,
-    &.of2,
-    &.of3,
-    &.of4,
-    &.of5,
-    &.of6 {
-        &.done {
-            i {
-                display: inline-block;
+    &.done {
+        i {
+            display: inline-block;
+            height: $progress-size;
+            width: $progress-size;
+            color: transparent;
+            font-size: 0;
+            font-style: normal;
+
+            &:after {
+                position: absolute;
+                top: 2px;
+                left: -1px;
+                font-family: $icon-font;
+                content: '\79';
                 height: $progress-size;
                 width: $progress-size;
-                color: transparent;
-                font-size: 0;
-                font-style: normal;
-
-                &:after {
-                    position: absolute;
-                    top: 2px;
-                    left: -1px;
-                    font-family: $icon-font;
-                    content: '\79';
-                    height: $progress-size;
-                    width: $progress-size;
-                    color: $color-midnight;
-                    font-size: 12px;
-                }
+                color: $color-midnight;
+                font-size: 12px;
             }
         }
     }
