UIP-1912 Formatted Content component
Change-Id: I96d7fa2f9ccf0652ece8c1389858f3312bad3549

--- a/packages/ui-library/src/css/html-elements.scss
+++ b/packages/ui-library/src/css/html-elements.scss
@@ -1,10 +1,8 @@
 
 body {
-    font-family: $font-pn-regular;
-    font-size: 14px;
+    @include text-body;
+
     line-height: $line-height-default;
-    color: $color-elephant;
-    font-weight: 300;
 }
 
 a {
