--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -1,4 +1,5 @@
-@import 'general/_page-header.scss';
+@import 'general/page-header';
+@import 'general/formatted-content';
 
 .content-link {
     line-height: inherit;
