UIP-1963 Revise UI Library 101 page + enable new markdown/MDX documentation pages
Change-Id: Ia251acf0ff4e3b81d8fa97b9a81ac22742c3cec4

--- a/packages/ui-library/src/demo/css/layout.scss
+++ b/packages/ui-library/src/demo/css/layout.scss
@@ -55,7 +55,7 @@ $sidenav-lineheight: 22px;
     .fullscreen {
         .output {
             padding: 0;
-            margin: 25px 0 0;
+            margin: 0;
             border: none;
 
             &:before {
