UIP-1864 : when in an error state, hide the icon on the searchBar input
Change-Id: I152053c84b7a0e5704de577fb5719d4208aa983b

--- a/packages/ui-library/src/css/searchbar.scss
+++ b/packages/ui-library/src/css/searchbar.scss
@@ -127,4 +127,13 @@ $searchbar-input-height: 38px;
         border-top: none;
         padding-bottom: 0;
     }
+
+    .input-message {
+        &__icon {
+            display: none;
+        }
+        .input-container {
+            padding-right: 0;
+        }
+    }
 }
