UIP-1924 Darken body text
Change-Id: Ifdaca05c72f6e3d9f09820daedd5c06b19be2df0

--- a/packages/ui-library/src/css/text-styles.scss
+++ b/packages/ui-library/src/css/text-styles.scss
@@ -59,7 +59,7 @@ $font-size-reduced: 13px;
 
 // BODY
 @mixin text-body {
-    @include text-style($color-elephant);
+    @include text-style($color-neutral-20);
 }
 
 .text-body {
