UIP-1909 : add ability to add help text to the MultiDragColumn name/title
Change-Id: Ifff65a1712afbd77190f06b8d26440bc8e660870

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -93,6 +93,10 @@
         text-transform: uppercase;
         margin-right: $spacing-sm;
     }
+    &__column-helptext {
+        margin: 0 $spacing-md 0 $spacing-xs;
+    }
+
     &--resizable {
         .items {
             max-height: none !important;
